# lspyx

./: Cargo.toml  README.md  install.sh
agents/skills/lspyx/: SKILL.md
src/: cli.rs  commands.rs  daemon.rs  lib.rs  mcp.rs  model.rs  parse.rs  render.rs
tests/: mcp_protocol.rs
