[package]
name = "lspyx"
version = "0.1.5"
edition = "2024"
description = "Agent-friendly, read-only LSP CLI for semantic code navigation"
license = "MIT"
readme = "README.md"
keywords = ["lsp", "cli", "semantic-navigation", "python", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"
which = "8.0.0"
